<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".RegistrationActivity"
    style="@style/chatApp">
    <include
        layout="@layout/layout_app_bar"
        android:id="@+id/registrationAppBar"
        tools:targetApi="11"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/input"
        android:drawableEnd="@drawable/profileimage"
        android:hint="@string/enterName"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="20dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/input"
        android:drawableEnd="@drawable/mailimage"
        android:hint="@string/EnterEmailAddress"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingRight="20dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorText"
        android:textSize="16sp" />


    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/buttons"
        android:padding="8dp"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>

