<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorText"
        android:drawableStart="@drawable/profileimage"
        android:textSize="16sp"
        android:padding="12dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="  Enter Email or Phone Number"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorWhite"
        android:drawableStart="@drawable/passimage"
        android:hint="  Enter Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorText"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/forget_password_link"
        android:layout_below="@id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textAlignment="textEnd"
        android:text="@string/forgetPassword"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        />
    <Button
        android:id="@+id/login_btn"
        android:layout_below="@id/forget_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimary"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        />
    <TextView
        android:id="@+id/create_account_link"
        android:layout_below="@id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textAlignment="center"
        android:text="@string/createNew"

        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        />

</RelativeLayout>